fix min-width 300px input-area top position to avoid overlapping

--- a/assets/style.css
+++ b/assets/style.css
@@ -290,7 +290,7 @@ input {
 
     #text-input {
         right: 10px;
-        top: 850px;
+        top: 870px;
         margin-top: 100px;
     }
 
